--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <blockquote id="quote"></blockquote>
     <button onclick="getQuote()">Generate Quote</button> <br> <br>
     <a target="_blank" href="randomUser.html">Best Buddy</a>
-    <a target="_blank" href="country.html">Best Buddy</a>
+    <a target="_blank" href="country.html">Countries</a>
 
 
     <script src="js/kaney.js"></script>
