favorite meal added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>api.kaney.rest</title>
+    <title>Application Programming Interface (API)</title>
     <style>
         blockquote {
             height: 100px;
@@ -34,6 +34,7 @@
     <button onclick="getQuote()">Generate Quote</button> <br> <br>
     <a target="_blank" href="randomUser.html">Best Buddy</a>
     <a target="_blank" href="country.html">Countries</a>
+    <a target="_blank" href="mealDB.html">Search Your Favourite Meal</a>
 
 
     <script src="js/kaney.js"></script>
